objects/redwing__ILT_Event__c.object
<CustomObject>
    <fields>
        <fullName>ltcomm__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ILT Events</relationshipLabel>
        <relationshipName>ILT_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the Learning detail header</inlineHelpText>
        <label>Background Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>ILT Events</relationshipLabel>
        <relationshipName>ILT_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Registration_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the default registration survey to be used for new ILT Classes created within this ILT Event</inlineHelpText>
        <label>Registration Survey</label>
        <referenceTo>redwing__Survey__c</referenceTo>
        <relationshipLabel>ILT Events</relationshipLabel>
        <relationshipName>ILT_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ILT Event</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ILT Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>